# infra-cost-model

./: .gitignore  .mise.toml  AGENTS.md  CONTRIBUTING.md  DESIGN_PRINCIPLES.md  Dockerfile  README.md  UBIQUITOUS_LANGUAGE.md  loop.py  pyproject.toml
.github/workflows/: pr-tests.yml
.pi/: APPEND_SYSTEM.md  README.md
.pi/agents/: design-principles-gap-finder.md  design-principles-issue-creator.md  design-principles-reviewer.md  impl-orchestrator.md  issue-analyzer.md  pr-implementer.md  pr-quality-gate.md  reviewer.md
.pi/chains/: design-principles-review-pipeline.chain.md  issue-pipeline.chain.md
data/seed/: aws_pricelist_seed.json
examples/: always-on-infrastructure.yaml  data-pipeline.yaml  ecommerce-microservices.yaml  event-driven-fanout.yaml  llm-augmented-api.yaml  serverless-api.yaml
infra_cost_model/: __init__.py  cli.py
infra_cost_model/codegen/: __init__.py  generator.py  schema_reader.py
infra_cost_model/engine/: __init__.py  engine.py
sdk/ts/: package.json  (+1 more)
tests/: test_alb.py  test_apigw.py  test_bedrock.py  test_cli.py  test_cloudfront.py  test_cloudwatch.py  test_codegen.py  test_dynamodb.py  test_ecs.py  test_engine.py  test_eventbridge.py  test_external.py  test_identity_providers.py  test_infracost_client.py  test_lambda.py  test_misc_services.py  test_multicloud.py  test_networking.py  test_pricing.py  test_rds.py  test_registry.py  test_s3.py  test_sdk.py  test_sns.py  test_sqs.py  test_stack_always_on.py  test_stack_data_pipeline.py  test_stack_ecommerce.py  test_stack_fanout.py  test_stack_llm_api.py  test_stack_serverless_api.py
(+42 files in other folders)
